# ChangeLog for app-text/multitail
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.127 2015/05/09 09:01:18 jer Exp $

*multitail-6.4.1 (09 May 2015)

  09 May 2015; Jeroen Roovers <jer@gentoo.org> +multitail-6.4.1.ebuild,
  +files/multitail-6.4.1-gentoo.patch:
  Version bump.

*multitail-6.3 (10 Feb 2015)

  10 Feb 2015; Justin Lecher <jlec@gentoo.org>
  +files/multitail-6.3-as-needed.patch, +multitail-6.3.ebuild,
  -files/5.2.2-as-needed.patch, -files/5.2.6-buffer-overflow.patch,
  -files/multitail-5.2.12-as-needed.patch,
  -files/multitail-5.2.13-as-needed.patch, multitail-6.2.1.ebuild:
  Version Bump; use src_compile to build; drop old patches

  29 Oct 2014; Justin Lecher <jlec@gentoo.org> -multitail-5.2.13.ebuild:
  Drop old

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> multitail-6.2.1.ebuild:
  Stable for sparc, wrt bug #519882

  28 Oct 2014; Agostino Sarubbo <ago@gentoo.org> multitail-6.2.1.ebuild:
  Stable for ia64, wrt bug #519882

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> multitail-6.2.1.ebuild:
  Stable for x86, wrt bug #519882

  05 Oct 2014; Agostino Sarubbo <ago@gentoo.org> multitail-6.2.1.ebuild:
  Stable for ppc, wrt bug #519882

  17 Sep 2014; Chema Alonso <nimiux@gentoo.org> multitail-6.2.1.ebuild:
  Stable for amd64 wrt bug #519882

  15 Aug 2014; Jeroen Roovers <jer@gentoo.org> multitail-6.2.1.ebuild:
  Stable for HPPA (bug #519882).

  14 Aug 2014; Justin Lecher <jlec@gentoo.org> -multitail-5.2.12.ebuild,
  -multitail-6.0.ebuild, -multitail-6.1.ebuild, -multitail-6.2.ebuild:
  Drop old

  13 Aug 2014; Agostino Sarubbo <ago@gentoo.org> multitail-5.2.13.ebuild:
  Stable for ppc, wrt bug #491948

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> multitail-5.2.13.ebuild:
  sparc stable wrt #491948

  02 Mar 2014; Akinori Hattori <hattya@gentoo.org> multitail-5.2.13.ebuild:
  ia64 stable wrt bug #491948
