@@ -1,8 +1,8 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX multitail-6.0-as-needed.patch 1825 SHA256 19cbcf61fc9e6cfcce4b8f8cbaebd079586f267063b8332cba14318bb67619c5 SHA512 a6380660523196e6c0339ac46f7ad8aa10ba3bf8d10be1dd65028fba3103df74653d3d9e7277353069d1cfcfc94194bd4ee06751cddf04757d2a54f60c6db58d WHIRLPOOL 42a171e19d3c9d94e6b08e135203a5e3cabdb654a4ac787f9d1d5972afe4cc0c2e94d485e74f606de76fa774d9ba2f0e15179e690416be055c5abca0762bab9c
-AUX multitail-6.3-as-needed.patch 1685 SHA256 b86bf633f0ab4e2bf52032162b599fe70e24f23b9c31057a9f1eec8534a8151e SHA512 29e229d4a7770ac8bb39b6cc6e6e539416760aad68ff2921f50229137d6cb668a59c771ebb87f9707d121c7f02045d8b6f0df4f7557b0ef7abd979a83e78e331 WHIRLPOOL c9fb3cc7511c086c2bc24cc4fc04e5a0dc8696af9b5f64f4a82f9aa8816f8033ca0413ca7223222c673ba5c0bd6c539a48e5e623ea46d5c9a9401b195ec7f1ba
+AUX multitail-6.0-as-needed.patch 1681 SHA256 69e449ef383029e5b2582ee68e461f841a21e845ba3c91ef3cedc469263d118d SHA512 f93da5f7474259e9926cda33b1f74ed54cb68ad75415513d9a27bf43d5058a4f7b9beabd7cd3295901a52b413a13947d9f13e9070aaff359f3d1ed229569a861 WHIRLPOOL a1595df25f2b9f0feffe4a5c551977f5964e97806ad686fe44a1957b6ee2ab3092d4a341d12efeb3d407cf238561157423afd4e5115fc8c52fa8d75ea9ceb724
+AUX multitail-6.3-as-needed.patch 1544 SHA256 c3437402ddb1e70c208419e723718125db0547d5bb0aec7a27a98127a3d7dca2 SHA512 43ff96dbf690c819c218db899cae1eb582abf7ec6e57521737125ce2a6cdf087acad5bfc61dfa6fa76a28d7144d2a2b8d4db7ce6619b2117ceb3d7eb0eb4b0e9 WHIRLPOOL bb06ae27fce50bd689f059b2a99006500985a5366a65c581a4422f249d814f9aa45a6037634a2a6dec79802ccbb42943887dc04cbcb626fb283e1252ce52192c
 AUX multitail-6.4.1-gentoo.patch 1440 SHA256 18f0b158eafaf838dac957cfb21ac9db9ecbcc4e1d45cf42d35079346698adc1 SHA512 eb53834c68dc46c22a2d900cf5e8835a98ff9c9b001ae15eb778bb6348bd48b17dea8a1605bfcc9ddad4324300a81013a0a3710e559c00e369ae42cdfb38b6a7 WHIRLPOOL d898950a532daf38f554a7ab111621ae39de898c28e25b7d8854bc96784734eeed24c232afc86456ec464341aaf28ca38e9c32bacd7af4d88beab3c180881ea3
 DIST multitail-6.2.1.tgz 166049 SHA256 1e586cd62c3cdb8089062c9670a6d8588359e2f8030b8b18dbc715ea59d92e11 SHA512 e1515c000c25be6532f590a2d030c44419866994c2744140d124c1b6ac73acf460b3a41ba6e0e8398350c180030eb69d13b537005b0744047d5c5a374b4cb123 WHIRLPOOL a14ec63145f412b21d7c769452c957fda1170daae725113991a8f4c1da19430516b7a27582f183b312a3388a6944beac0de64753684d60cc7255453254c2fd1c
 DIST multitail-6.3.tgz 155410 SHA256 1ba6afc2d0322bc09024664762a2fc7b8055c1d8ceb74acc442c49ccc84b817a SHA512 e16bb8f1db97e24ac917193cfcae77a0933c1d91cbebb8ba3d2f0af3cb9fe3b801b08f5a7b70b6f46c5edb4a251c81d5a8e03ec9599d40857a64f3cfa1f6734f WHIRLPOOL a37443f3ceaaedc1e708503c9cf9df01034a03dcc682406c0d93beb2a5f1c391f1ab0df7762d94fa43af8d155932bf23cd198e8a01b45fd3c5ee5963c62da24f
@@ -10,12 +10,12 @@ DIST multitail-6.4.1.tgz 155717 SHA256 8a6baecf3537c791f70645f3613bfea0c91a22040
 EBUILD multitail-6.2.1.ebuild 1221 SHA256 e7a367f9d9022dd7f88fd795c8f674ec03b5556bd65881ff10017f5d5a41ae6c SHA512 fcd240225f91c433573b7c408dd2ba656ad3f3eba3115f1b26e53a0f7a99fd4e933cc6bcad19e83410ef16ccf5a91d6dd1a2471d6c901f3fe2263096510c9db2 WHIRLPOOL 466908636c2075466f041efab6cf49ca7a6dca8f274485725871cd7c410aea111acdd42b9ef1fe877bc3c5e25d7cc0823d43590d94cbf4fbc7e2afd8b54f2a8b
 EBUILD multitail-6.3.ebuild 1424 SHA256 b3419fd3e9df1fca47e9f78f2796a97c424b48ab638ac76688990d79e324599a SHA512 c1c657229e0ab4dd6a99bb0965aa2935356fa8ebadd588fe9fc8182a00827f77673e0a6f8a219684462957bd56e3130123c1bc19f58db1f8300bbf5809ff86ce WHIRLPOOL 4579bc950224af0e5036d4840ee8906bbbb5d1ed5daef5d8cfa88f5d218282de067176164dedd1ef29eca9fa7d78fcac77b6265dfcc67315c15f3934d678a56f
 EBUILD multitail-6.4.1.ebuild 1411 SHA256 7596d0302fa2a805748174893cf46a62a577e873a0e17b683c7981e6a8db2bcc SHA512 d40bcde342825bedeeb424af0655fcd32bfe4b8739104522ea972d79f8feb41b91f7a1eb47bda2c5de21f35ac5f32f0490976c1e0504551558e02fbbda137357 WHIRLPOOL 33dd6f028765f2e7049961752bd2abbdb709bd7cd44594308cc6df0b50bff769327d85b9302e864dac411d1e2ea5dc14b767a1b0bb93533312d5f0e24f80b454
-MISC ChangeLog 15507 SHA256 30612139458570bd56ae809aa543190458c542768e279ccbba94e85c5dae932e SHA512 183066dc5196396c89379add975284dd654b891bfd01068481a55429cf883cb354aba7dd4d8fa583e5ac8495675dfc5c359c123a00b8187c51246a5baf07faa8 WHIRLPOOL 1e1ef72ab6b1d07892440570965f46285b29691e59ddab5d2ac486681c98482851d2b0dcb8724248d0c8f43d4ead9827393c8aac48784e80a59be599e36a5afe
+MISC ChangeLog 15651 SHA256 8eb84796a812f13620b25cd3934b3c9450fd06e13f5502a601280095cd2d55a0 SHA512 8847f9389f21ad9f067d0ae9009409fdadbb8a9f2a088e8070f5c5943b130d0141a3d09688ecaf0186f321a95d61173e306655f50853fbbaa7414bd319785e94 WHIRLPOOL e52612777fab0373c736fa3a733a4faeb49f58934eab39780fec01293076463bf8fe2fee79509ce558314ae2c7adcd714d2d432484c2f245884e299df8f8e70a
 MISC metadata.xml 319 SHA256 becb3d73a94717c596b82746022803d99fe5f8cda1244512c9faa8a7b1c74b66 SHA512 bb561b88d4a4a4e7812eebbaf842cf65d81c7c90fe475793c944ea785715323eb386ce32e8a5759e7580089728b47fe0e1e47b8e05449a781a8a6ec5da2a82bd WHIRLPOOL 12575f9318912d9e8ef1b3bbc91f7d0da0eb3ec2d1ac9126e3981991c691ffacb22b30560a4ea54249f31fb62653efdd0a0b3e6fae828304096d4b1bbca78b91
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVNzN8ACgkQVWmRsqeSphPhMACcC2OXHmAABzHlqgshsfoRrNck
-fqkAnApk5a86TepIXd8AJ1iZ1046LCTV
-=5BAK
+iEYEAREIAAYFAlVNzo8ACgkQVWmRsqeSphOpIgCeIYOD1jlegFontuI9YvI9Ktaj
+zioAni3+Gpghy9x/A4QfEZ6Lo/RBq0i8
+=2NLZ
 -----END PGP SIGNATURE-----
