@@ -1,8 +1,3 @@
- Makefile | 15 ++++++++-------
- 1 file changed, 8 insertions(+), 7 deletions(-)
-
-diff --git a/Makefile b/Makefile
-index 3bdbe33..98d2c46 100644
 --- a/Makefile
 +++ b/Makefile
 @@ -4,14 +4,15 @@ UTF8_SUPPORT=yes
