@@ -1,6 +1,10 @@
 # ChangeLog for app-text/multitail
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.127 2015/05/09 09:01:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.128 2015/05/09 09:08:30 jer Exp $
+
+  09 May 2015; Jeroen Roovers <jer@gentoo.org>
+  files/multitail-6.0-as-needed.patch, files/multitail-6.3-as-needed.patch:
+  Clean up patches.
 
 *multitail-6.4.1 (09 May 2015)
 
